# sms-gateway

./: .env.demo  .env.dev  .env.example  .env.prod  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260429_0001_initial_schema.py  20260429_0002_add_idempotency_columns.py
app/: __init__.py  config.py  db.py  main.py
app/adapters/: factory.py
app/adapters/bank/: base.py  flexcube_placeholder.py  mock.py
app/adapters/sms/: android_gateway.py  base.py  mock.py  smpp_placeholder.py
app/api/: health.py  merchants.py  network.py  schemas.py  sms.py  transactions.py  users.py  wallets.py
app/models/: __init__.py  audit_event.py  merchant.py  sms_message.py  transaction.py  user.py  wallet.py
app/schemas/: __init__.py  api_responses.py  common.py  payment_request.py  sms.py  user.py  wallet.py
app/seed/: demo_seed.py
app/services/: audit_service.py  command_parser.py  notification_service.py  transaction_service.py  wallet_service.py
app/tests/: conftest.py  test_integration_api.py  test_parser.py  test_reset_demo_seed.py  test_services.py  test_sms_adapters_contract.py  test_transactions.py
app/ui/static/: demo.css  demo.js
app/ui/templates/: admin.html  mobile_demo.html
scripts/: reset_db.sh  seed.sh  start.sh
